# SvnLog

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg-config.json  vcpkg.json
cmake/: PackExePostBuild.cmake
src/: CAutoListCtrl.cpp  CAutoListCtrl.h  CBrowseCtrl.cpp  CBrowseCtrl.h  CMakeLists.txt  DateConverter.cpp  DateConverter.h  FilteredCommits.cpp  FilteredCommits.h  Resource.h  SvnLog.cpp  SvnLog.h  SvnLog.rc  SvnLogDlg.cpp  SvnLogDlg.h  SvnRepos.cpp  SvnRepos.h
src/res/: SvnLog.rc2
